fix: add vertical alignment for table cells in general.scss and ensure newline at end of styles.min.css for consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -675,6 +675,12 @@ body.logged-in {
 	text-align: left;
 }
 
+.wp-block-table {
+	td, th {
+		vertical-align: middle;
+	}
+}
+
 .text-content {
     ul, p, h1, h2, h3, h4, h5 .h6 {
         margin-bottom: 25px;
